--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -319,6 +319,20 @@
   year={2013}
 }
 
+@inproceedings{zhao2013person,
+  title={Person re-identification by salience matching},
+  author={Zhao, Rui and Ouyang, Wanli and Wang, Xiaogang},
+  booktitle={ICCV},
+  year={2013}
+}
+
+@inproceedings{zhao2014learning,
+  title={Learning mid-level filters for person re-identification},
+  author={Zhao, Rui and Ouyang, Wanli and Wang, Xiaogang},
+  booktitle={CVPR},
+  year={2014}
+}
+
 @inproceedings{farenzena2010person,
   title={Person re-identification by symmetry-driven accumulation of local features},
   author={Farenzena, Michela and Bazzani, Loris and Perina, Alessandro and Murino, Vittorio and Cristani, Marco},
@@ -761,13 +775,6 @@ doi = {10.1007/s11263-015-0816-y}
   year={2013},
 }
 
-@inproceedings{li2014deepreid,
-  title={Deepreid: Deep filter pairing neural network for person re-identification},
-  author={Li, Wei and Zhao, Rui and Xiao, Tong and Wang, Xiaogang},
-  booktitle={CVPR},
-  year={2014}
-}
-
 @inproceedings{zheng2015scalable,
   title={Scalable Person Re-identification: A Benchmark},
   author={Zheng, Liang and Shen, Liyue and Tian, Lu and Wang, Shengjin and Wang, Jingdong and Tian, Qi},
@@ -1077,7 +1084,7 @@ doi = {10.1007/s11263-015-0816-y}
 }
 
 @inproceedings{he2016identity,
-  title={Identity mappings in deep residual networks},
+  title={Identity Mappings in Deep Residual Networks},
   author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
   booktitle={ECCV},
   year={2016}
@@ -1312,4 +1319,68 @@ doi = {10.1007/s11263-015-0816-y}
   author={Zhao, Rui and Oyang, Wanli and Wang, Xiaogang},
   journal={TPAMI},
   year={2017}
+}
+
+@inproceedings{tzeng2015simultaneous,
+  title={Simultaneous deep transfer across domains and tasks},
+  author={Tzeng, Eric and Hoffman, Judy and Darrell, Trevor and Saenko, Kate},
+  booktitle={ICCV},
+  year={2015}
+}
+
+@inproceedings{ganin2014unsupervised,
+  title={Unsupervised domain adaptation by backpropagation},
+  author={Ganin, Yaroslav and Lempitsky, Victor},
+  booktitle={ICML},
+  year={2015}
+}
+
+@InProceedings{kang2016object,
+  Title                    = {Object Detection from Video Tubelets with Convolutional Neural Networks},
+  Author                   = {Kang, Kai and Ouyang, Wanli and Li, Hongsheng and Wang, Xiaogang},
+  Booktitle                = {CVPR},
+  Year                     = {2016}
+}
+
+@InProceedings{yang2016end,
+  Title                    = {End-to-End Learning of Deformable Mixture of Parts and Deep Convolutional Neural Networks for Human Pose Estimation},
+  Author                   = {Yang, Wei and Ouyang, Wanli and Li, Hongsheng and Wang, Xiaogang},
+  Booktitle                = {CVPR},
+  Year                     = {2016}
+}
+
+
+@article{li2015locality,
+  title={Locality based discriminative measure for multiple-shot human re-identification},
+  author={Li, Wei and Wu, Yang and Mukunoki, Masayuki and Kuang, Yinghui and Minoh, Michihiko},
+  journal={Neurocomputing},
+  year={2015}
+}
+
+@article{zhang2015bit,
+  title={Bit-scalable deep hashing with regularized similarity learning for image retrieval and person re-identification},
+  author={Zhang, Ruimao and Lin, Liang and Zhang, Rui and Zuo, Wangmeng and Zhang, Lei},
+  journal={TIP},
+  year={2015}
+}
+
+@inproceedings{xu2013human,
+  title={Human re-identification by matching compositional template with cluster sampling},
+  author={Xu, Yuanlu and Lin, Liang and Zheng, Wei-Shi and Liu, Xiaobai},
+  booktitle={ICCV},
+  year={2013}
+}
+
+@article{liu2014fly,
+  title={On-the-fly feature importance mining for person re-identification},
+  author={Liu, Chunxiao and Gong, Shaogang and Loy, Chen Change},
+  journal={Pattern Recognition},
+  year={2014}
+}
+
+@inproceedings{li2015multi,
+  title={Multi-scale Learning for Low-resolution Person Re-identification},
+  author={Li, Xiang and Zheng, Wei-Shi and Wang, Xiaojuan and Xiang, Tao and Gong, Shaogang},
+  booktitle={ICCV},
+  year={2015}
 }
