--- a/mainmatter/human_identification.tex
+++ b/mainmatter/human_identification.tex
@@ -19,9 +19,8 @@ This chapter introduces the background of human identification. Because of its r
 Human identification aims at finding a target person in a gallery of photos. It can be categorized into three levels regarding different types of input photos --- faces only, persons in photo albums, and pedestrians captured by surveillance cameras, as compared in Figure~\ref{fig:human-id-problems}.
 \begin{figure}[t]
 \begin{center}
-\fbox{\rule{0pt}{2in} \rule{0.9\linewidth}{0pt}}
-%\includegraphics[width=0.8\linewidth]{egfigure.eps}
-\caption{Feedforward neural network consisting of sequential linear and non-linear operators}
+\includegraphics[width=1.0\linewidth]{figures/human-id.pdf}
+\caption{Human identification with different types of input photos}
 \label{fig:human-id-problems}
 \end{center}
 \end{figure}
