--- a/mainmatter/multi_domain.tex
+++ b/mainmatter/multi_domain.tex
@@ -18,7 +18,7 @@ Another interesting aspect of multi-domain learning is that it enriches the data
 \label{fig:reid_datasets}
 \end{figure}
 
-In this paper, we present a pipeline for learning generic feature representations from multiple domains that are effective on all of them simultaneously. For concrete demonstration, we target the person re-identification problem, but the method itself would be generalized to other problems with datasets of multiple domains. As learning features from a large-scale classification dataset is proved to be effective~\cite{sun2014deep}, we first mix all the domains together and train a Convolutional Neural Network (CNN) to recognize person identities (IDs). The CNN model we designed consists of several BN-Inception~\cite{szegedy2014going,ioffe2015batch} modules, and its capacity well fits to the scale of the mixed dataset. This carefully designed CNN model provides us a fairly strong baseline, but the simple joint learning scheme does not take full advantages of the variations of multiple domains.
+In this paper, we present a pipeline for learning generic feature representations from multiple domains that are effective on all of them simultaneously. For concrete demonstration, we target the person re-identification problem, but the method itself would be generalized to other problems with datasets of multiple domains. As learning features from a large-scale classification dataset is proved to be effective~\cite{sun2014deep1}, we first mix all the domains together and train a Convolutional Neural Network (CNN) to recognize person identities (IDs). The CNN model we designed consists of several BN-Inception~\cite{szegedy2014going,ioffe2015batch} modules, and its capacity well fits to the scale of the mixed dataset. This carefully designed CNN model provides us a fairly strong baseline, but the simple joint learning scheme does not take full advantages of the variations of multiple domains.
 
 Intuitively, neurons that are effective for one domain could be useless for another domain because of the presence of domain biases. For example, only the i-LIDS dataset contains pedestrians with luggages, thus the neurons that capture luggage features are of no use when recognizing people from other domains.
 
@@ -32,7 +32,7 @@ The contribution of our work is three-fold. First, we present a pipeline for lea
 \section{Related Work} % (fold)
 \label{sec:related_work}
 
-In recent years, training deep neural networks with multiple domains has been explored. Feature representations learned by Convolutional Neural Networks have shown their effectiveness in a wide range of visual recognition tasks~\cite{krizhevsky2012imagenet,girshick2014rich,long2014fully,chu2016structure,yang2016end,kang2016object}. Long~\etal~\cite{long2015learning} incorporated the multiple kernel variant of Maximum Mean Discrepancy (MMD) objective for regularizing the training of neural networks. Ganin~\etal~\cite{ganin2014unsupervised} proposed to reduce the distribution mismatch between the source and target domains by reversing the gradients of the domain classification loss, which is also utilized by~\cite{tzeng2015simultaneous} with a softlabel matching loss to transfer task information. Most of these methods aim at finding a common feature space that is domain invariant. However, our approach allows the representation to have disjoint components that are domain specific, while also learning a shared representation.
+In recent years, training deep neural networks with multiple domains has been explored. Feature representations learned by Convolutional Neural Networks have shown their effectiveness in a wide range of visual recognition tasks~\cite{krizhevsky2012imagenet,girshick2014rich,long2014fully,chu2016structured,yang2016end,kang2016object}. Long~\etal~\cite{long2015learning} incorporated the multiple kernel variant of Maximum Mean Discrepancy (MMD) objective for regularizing the training of neural networks. Ganin~\etal~\cite{ganin2014unsupervised} proposed to reduce the distribution mismatch between the source and target domains by reversing the gradients of the domain classification loss, which is also utilized by~\cite{tzeng2015simultaneous} with a softlabel matching loss to transfer task information. Most of these methods aim at finding a common feature space that is domain invariant. However, our approach allows the representation to have disjoint components that are domain specific, while also learning a shared representation.
 
 As deep neural networks usually contain millions of parameters, it is of great importance to reduce the parameter space by adding regularizations to the weights. The quality of the regularization method would significantly affect both the discriminative power and generalization ability of the trained networks. Dropout~\cite{hinton2012improving} is one of the most widely used regularization method in training deep neural networks, which significantly improves the performance of the deep model~\cite{krizhevsky2012imagenet}. During the network training process, Dropout randomly sets neuron responses to zero with a probability of 0.5. Thus a training batch updates only a subset of all the neurons at each time, which avoids co-adaptation of the learned feature representations.
 
@@ -59,7 +59,7 @@ Our proposed pipeline for learning CNN features from multiple domains consists o
 \subsection{Problem formulation} % (fold)
 \label{sub:problem_formulation}
 
-Although the pipeline itself is not limited to any specific scope, we target the person re-identification problem for concrete demonstration. The problem can be formulated as follows. Suppose we have $D$ domains, each of which consists of $N_i$ images of $M_i$ different people. Let $\{(x_i^{(j)}, y_i^{(j)})_{j=1}^{N_i}\}_{i=1}^{D}$ denote all training samples, where $x_i^{(j)}$ is the $j$-th image of the $i$-th domain, and $y_i^{(j)} \in \{1,2,\dots,M_i\}$ is the identity of the corresponding person. Our goal is to learn a generic feature extractor $g(\cdot)$ that has similar outputs for images of the same person and dissimilar outputs for different people. During the test phase, given a probe pedestrian image and a set of gallery images, we use $g(\cdot)$ to extract features from all of them, and rank the gallery images according to their Euclidean distances to the probe image in the feature space. For the training phase, there are several frameworks that use pairwise~\cite{li2014deepreid,ahmed2015improved} or triplet~\cite{schroff2015facenet} inputs for learning feature embeddings. In our approach, we train a CNN to recognize the identity of each person, which is also adopted in the face verification work~\cite{sun2014deep}.
+Although the pipeline itself is not limited to any specific scope, we target the person re-identification problem for concrete demonstration. The problem can be formulated as follows. Suppose we have $D$ domains, each of which consists of $N_i$ images of $M_i$ different people. Let $\{(x_i^{(j)}, y_i^{(j)})_{j=1}^{N_i}\}_{i=1}^{D}$ denote all training samples, where $x_i^{(j)}$ is the $j$-th image of the $i$-th domain, and $y_i^{(j)} \in \{1,2,\dots,M_i\}$ is the identity of the corresponding person. Our goal is to learn a generic feature extractor $g(\cdot)$ that has similar outputs for images of the same person and dissimilar outputs for different people. During the test phase, given a probe pedestrian image and a set of gallery images, we use $g(\cdot)$ to extract features from all of them, and rank the gallery images according to their Euclidean distances to the probe image in the feature space. For the training phase, there are several frameworks that use pairwise~\cite{li2014deepreid,ahmed2015improved} or triplet~\cite{schroff2015facenet} inputs for learning feature embeddings. In our approach, we train a CNN to recognize the identity of each person, which is also adopted in the face verification work~\cite{sun2014deep1}.
 
 % subsection problem_formulation (end)
 
