--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -1384,3 +1384,31 @@ doi = {10.1007/s11263-015-0816-y}
   booktitle={ICCV},
   year={2015}
 }
+
+@article{lowe2004distinctive,
+  title={Distinctive image features from scale-invariant keypoints},
+  author={Lowe, David G},
+  journal={IJCV},
+  year={2004}
+}
+
+@inproceedings{dalal2005histograms,
+  title={Histograms of oriented gradients for human detection},
+  author={Dalal, Navneet and Triggs, Bill},
+  booktitle={CVPR},
+  year={2005}
+}
+
+@article{bay2008speeded,
+  title={Speeded-up robust features (SURF)},
+  author={Bay, Herbert and Ess, Andreas and Tuytelaars, Tinne and Van Gool, Luc},
+  journal={CVIU},
+  year={2008}
+}
+
+@inproceedings{farenzena2010person,
+  title={Person re-identification by symmetry-driven accumulation of local features},
+  author={Farenzena, Michela and Bazzani, Loris and Perina, Alessandro and Murino, Vittorio and Cristani, Marco},
+  booktitle={CVPR},
+  year={2010}
+}
