--- a/thesis.tex
+++ b/thesis.tex
@@ -18,7 +18,7 @@
 \input{mainmatter/noisy_labels.tex}
 \input{mainmatter/multi_domain.tex}
 \input{mainmatter/person_search.tex}
-\input{mainmatter/conclusion.tex}
+\input{mainmatter/conclusions.tex}
 %\clearpage
 \appendix
 %\input{Appendix/APX}    % Appendix A - F
