--- a/mainmatter/introduction.tex
+++ b/mainmatter/introduction.tex
@@ -11,16 +11,14 @@ Among the broad spectrum of topics, \emph{human identification}, which aims at f
 Given a pair of person photos, although human can easily tell whether they are of the same identity or not, this task is extremely difficult to computers. Human can instantly figure out high-level attributes, such as gender and age, and then gradually compare their finer details, for example, the clothes colors, materials, styles, and the accessories. However, what computers percept from a digital photo is just an array of integers representing the color illumination at each pixel. Computers need to extract patterns from these numbers and understand their high-level semantic meanings, which are also called \emph{features} or \emph{feature representations} in computer vision. The challenge here is to define which features are useful for human identification, and what are their unique patterns.
 
 % Deep representation learning
-Thanks to the rapid development of deep learning algorithms, researchers have proposed many effective approaches to tackle these challenges. Different from traditional methods [SIFT, HOG, SURF, SDALF, LOMO] that manually define a fixed set of rules to extract features, deep learning methods [AlexNet, VGGNet, GoogLeNet, ResNet] automatically learn from data a parameterized function that directly transforms an input image into features. Instead of trying to define good features, deep learning solves the challenge by optimizing the feature extraction function for an objective in a data-driven manner. We have witnessed rapid progress of teaching computers to classify an image into 1000 categories---the accuracy increases from $71.8\%$ to $96.4\%$ in five years! The success of deep learning methods in image classification have laid a great foundation for solving our human identification problem.
+Thanks to the rapid development of deep learning algorithms, researchers have proposed many effective approaches to tackle these challenges. Different from traditional methods~\cite{lowe2004distinctive,dalal2005histograms,bay2008speeded,farenzena2010person,liao2015person} that manually define a fixed set of rules to extract features, deep learning methods~\cite{krizhevsky2012imagenet,simonyan2014very,szegedy2014going,he2015deep} automatically learn from data a parameterized function that directly transforms an input image into features. Instead of trying to define good features, deep learning solves the challenge by optimizing the feature extraction function for an objective in a data-driven manner. We have witnessed rapid progress of teaching computers to classify an image into 1000 categories---the accuracy increases from $71.8\%$ to $96.4\%$ in five years! The success of deep learning methods in image classification have laid a great foundation for solving our human identification problem.
 
 % More challenges specific to human identification
 %   hard to get supervised data
 %   data are from multiple domains
 %   lacks a uniform framework for practical applications
-However, human identification poses more challenges than image classification. First, it lacks enough supervised data for learning good features for human. Image classification often relies on large-scale datasets [ImageNet] with manual annotations. But most of their images consist of animals, plants, and man-made objects, which may not be relevant to human identification. Second, most of the existing datasets for human identification are collected by different research institutes. Their data each has its own biases in human races, clothing styles, and camera settings, which requires the designed model to be able to handle such domain discrepancies. Third, image classification often assumes that a major object is in the center of an image. But practical human identification, especially in surveillance applications, often requires to find a target person in whole scene images. It currently lacks a uniform framework for such practical applications.
-(Need to address the "Scalable" in title).
-
-% Moreover, since the two photos could be captured from different camera views and the two people could have various poses, their arrays of integers often significantly misaligned. It thus raises another challenge of how to correctly compare the semantic meanings between two images.
+However, human identification poses more challenges than image classification. First, it lacks enough supervised data for learning good features for human. Image classification often relies on large-scale datasets~\cite{deng2009imagenet
+} with manual annotations. But most of their images consist of animals, plants, and man-made objects, which may not be relevant to human identification. Second, most of the existing datasets for human identification are collected by different research institutes. Their data each has its own biases in human races, clothing styles, and camera settings, which requires the designed model to be able to handle such domain discrepancies. Third, image classification often assumes that a major object is in the center of an image. But practical human identification, especially in surveillance applications, often requires to find a target person in whole scene images. It currently lacks a uniform framework for such practical applications.
 
 % Contributions and chapters
 In this dissertation we address these three challenges respectively, in order to make human identification methods scalable to large-scale real-world applications.
