Finish the draft

--- a/frontmatter/abstract_cn.tex
+++ b/frontmatter/abstract_cn.tex
@@ -1,67 +1,10 @@
-﻿\begin{CJK*}{UTF8}{hei}
-
-% %%--------------------------------------------------------------------------
-% \chapter*{題獻/Dedication}
-% \addcontentsline{toc}{chapter}{Dedication}
-% \markboth{\uppercase{Dedication}}{\uppercase{Dedication}}
-% %%--------------------------------------------------------------------------
-
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-
-% \begin{center}
-% \Large
-
-% \textit{獻給我的丈夫劉雨}
-
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \bigskip
-% \end{center}
-
-
-% %%--------------------------------------------------------------------------
-% \chapter*{致謝/Acknowledgements}
-% \addcontentsline{toc}{chapter}{Acknowledgments}
-% \markboth{\uppercase{Acknowledgments}}{\uppercase{Acknowledgments}}
-% %%--------------------------------------------------------------------------
-
-% 在博士論文即將完成之際，謹允許我借此一隅向幫助、鼓勵和支持過我的老師、朋友和家人致以深深的敬意和衷心的感謝。
-
-% 首先要感謝的是我的博士論文導師顏慶義教授。顏教授學識淵博，洞察敏銳，給我很多啟發性的建議同時也讓我避免了不少彎路。我在攻讀博士學位期間取得的點滴進步都離不開顏教授的悉心指導。而顏教授嚴謹的治學態度和孜孜不倦的工作作風，更是讓我受益終身。
-
-% 同時要感謝的是圖像與視訊處理實驗室的徐孔達教授、湛偉權教授和Thierry Blu教授。他們對各種學術問題的真知灼見以及從不同角度給我提出的建議，同樣給我很大幫助和啟發，讓我在自己博士研究課題之外學到了很多知識。
-
-% 我也要感謝實驗室的伙伴們。他們是李宏亮、楊文嫻、張帆、陳震中、李傑、劉雨、魏振宇、崔春暉、張茜、劉強、李鬆南、馬林、鄧啟霖、姚劍、麥振文、馮志強、孫德慶、張偉、歐陽萬裡、張任奇和趙叢。共同的研究興趣讓我們這些年輕人走到一起，從他們身上我學到了很多。和他們在一起科研和學習，讓我感到充實而快樂，給我留下了非常美好的回憶。
-
-% 最後，讓我把最真摯的謝意獻給我的家人，他們是我的堅實後盾。父母的辛勤培養和殷殷期望，是我漫長求學生涯中不變的支柱。而我的丈夫劉雨，也是我的師兄，總是在我困難的時候幫助我，在我軟弱的時候鼓勵我，給我力量和勇氣去面對困難，迎接挑戰。
-
 %%--------------------------------------------------------------------------
 \chapter*{摘要}
-%\addcontentsline{toc}{chapter}{Chinese Abstract}
-%\markboth{\uppercase{Abstract}}{\uppercase{Abstract}}
+\addcontentsline{toc}{chapter}{Abstract in Chinese}
+\markboth{\uppercase{Abstract}}{\uppercase{Abstract}}
 %%--------------------------------------------------------------------------
-近年來，隨著信息技術的快速發展，高清視頻正逐步取代傳統的標清視頻，得到越來越廣泛的應用，包括數字電視廣播，高密度光盤存儲，視頻監控等等。然而，高清視頻相對于其他較低分辨率視頻，除了採樣頻率，還有哪些不同之處，以及如何利用這些不同之處來設計特別針對高清視頻的編碼和處理技術仍是一個亟待解決的研究課題。
+人物识别是计算机视觉领域非常重要的一类基础问题，其主要研究的是如何从一个图片或者视频集中找出一个目标人物。人物识别广泛应用于实际场景，是很多产品的重要组件，例如各类手机相册应用、自动驾驶系统、家庭安全防范系统、以及智能监控摄像头等等。
 
-首先，本論文定量研究了高清視頻的統計特性，包括空間相關性和功率譜密度。實驗結果顯示，高清視頻不僅有較高的空間相關性，其功率譜密度也較為特殊。主要的能量分部于垂直和水平方向，而其他方向，比如對角方向，能量很低。
+依托于深度学习技术的发展和大型带标注数据集的出现，深度神经网络目前已经可以在照片中识别上千种物体。但是人物识别仍然是一个很有挑战性的问题，因为该领域缺乏一个足够大规模的、带标注的数据集以训练有效的深度神经网络。与此同时，已有的小规模数据集通常收集自不同的场景，其图片各有偏颇，导致很难训练一个模型使其在所有的数据集上同时有效。另外，已有的研究工作多数集中于较为简单的问题设置，和真实的应用场景存在较大偏差，使得很难将研究直接用于实际产品。
 
-其次，基于以上兩點實驗結論，本論文提出了兩項編碼技術。針對空間特性，本論文提出採用二維16階變換來壓縮空間域像素，以期有效地去除較高的空間相關性。為了滿足不同的性能和復雜度需求，本論文所提出的二維16階變換又包括非正交整數餘弦變換(NICT)和改進的整數餘弦變換(MICT)兩類。另一方面，針對功率譜密度特性，本論文提出了參數化內插濾波器(PIF)，並將其運用于分像素運動補償。參數化內插濾波器不但可以像其他自適應內插濾波器一樣隨著視頻信號統計特性的變化而不斷調整，而且僅用五個參數來表示濾波器，而非逐一表示各個濾波器系數，從而大大節省了傳輸濾波器所需的比特數也提高了濾波器精度。實驗結果顯示，本論文所提出的兩項編碼技術，相對于最新國際視頻壓縮標準H.264/AVC中所採用的相應技術，都顯著提高了對高清視頻的率失真性能。
-
-最後，本論文研究了隔行高清視頻的特性，並提出了兩種實時去隔行技術以適用于不同的時延需求。這兩種去隔行技術是特別針對由H.264/AVC編碼的隔行視頻信號而設計的，所以碼流中豐富的語法元素值可以有效地用于估計局部的運動和紋理，從而使得去隔行算法作出相應有效調整。考慮到真實運動和紋理與估計值有可能會不一致，本論文又引入了對估計值可靠性的分析。實驗結果顯示，這兩項去隔行技術，相對于其他常用的實時去隔行技術，能提供較好的視覺質量，同時在不同平台上均能達到對1080\emph{i}視頻實時去隔行的需求。
-
-\end{CJK*}
+因此，在本文中我们将从三个角度解决这些问题，从而使人物识别技术扩展到真实的数据和应用上面。首先，我们提出使用带噪声、易收集的数据来代替精标注、难收集的数据来训练模型。我们还从互联网上收集了一个大规模的、含有错误标注的衣物数据集，并用我们提出了的深度学习模型从此类带噪声的数据中学习有用的服装特征，从而帮助人物识别。其次，我们针对多个各有偏颇的数据集，提出了一个联合此类数据训练的深度神经网络的方法，从而使其可以有效地同时利用这些不同研究机构和个人收集的数据。最后，我们着手解决一个更贴近实际应用的问题设置，即从完整的场景图片中找出并识别目标人物。我们设计了一个统一的深度神经网络，同时进行人物检测和识别，并且提出了一个新的目标函数用以更加高效地训练整个网络。
