--- a/frontmatter/acknowledgments.tex
+++ b/frontmatter/acknowledgments.tex
@@ -2,9 +2,13 @@
 \addcontentsline{toc}{chapter}{Acknowledgments}
 \markboth{\uppercase{Acknowledgments}}{\uppercase{Acknowledgments}}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+It is my greatest luck and honor to have worked with many inspiring people during my Ph.D. career. First and foremost, I would like to express my sincere appreciation and gratitude to my advisor Xiaogang Wang, who is a great mentor leading me to the research field of computer vision and deep learning. He set an example of being creative, rigorous, and hard working. Without his help and guidance I would hardly finish this dissertation.
+
+I enjoyed a wonderful postgraduate study at The Chinese University of Hong Kong, where I met and worked with fellow professors and students: Kai Kang, Xiao Chu, Jing Shao, Lu Sheng, Xingyu Zeng, Shuai Yi, Wei Li, Rui Zhao, Shuang Li, Yantao Shen, Hongyang Li, Wei Yang, Yikang Li, Zhuoyi Zhao, Yuanjun Xiong, Ruohui Wang, Hongsheng Li, Wanli Ouyang, Dahua Lin, Chen Change (Cavan) Loy, and Xiaoou Tang. It is my fortunate to learn a lot from all these collaborators.
+
+I really appreciate Tian Xia, Yi Yang, and Chang Huang, for offering me the great opportunity to glance at deep learning in industry, which encourages me to solve the problems that really matter.
+
+I would also like to thank Cheng Tai, Zhirong Wu, Jiaxin Mao, Chiheng Xu, and Xudong Yang. These talented people enlarged my vision and enlightened my career as a student.
+
+Last but not least, my deepest thanks go to my parents and Yahui Chen, who always support and encourage me to pursue my dream.
+
