--- a/frontmatter/frontmatter.tex
+++ b/frontmatter/frontmatter.tex
@@ -29,14 +29,14 @@
 
 \pagenumbering{roman}
 \setcounter{page}{1}
-%\input{frontmatter/ORG}    				% Statement of Originality
-%\input{frontmatter/Dedication}    	% Dedication
-% \input{frontmatter/abstract_cn}   % Traditional Chinense Abstract
+% \input{frontmatter/ORG}    				% Statement of Originality
+% \input{frontmatter/Dedication}    	% Dedication
+% \input{frontmatter/abstract_cn}     % Traditional Chinense Abstract
 \input{frontmatter/abstract_en}     % English Abstract
 \input{frontmatter/acknowledgments} % Acknowledgements
 \input{frontmatter/publications}    % List of Publications
-\input{frontmatter/nomenclature}    % Nomenclature
-%\input{frontmatter/Demos}   				% Demos and Data
+% \input{frontmatter/nomenclature}    % Nomenclature
+% \input{frontmatter/Demos}   				% Demos and Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%% Contents %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
