--- a/preamble/thesis.sty
+++ b/preamble/thesis.sty
@@ -347,6 +347,9 @@
 %% end of \newtheorem command
 %%
 
+\newcommand{\argmin}{\mathop{\mathrm{arg\,min}}}
+\newcommand{\argmax}{\mathop{\mathrm{arg\,max}}}
+
 \makeatletter
 \DeclareRobustCommand\onedot{\futurelet\@let@token\@onedot}
 \def\@onedot{\ifx\@let@token.\else.\null\fi\xspace}
