--- a/frontmatter/frontmatter.tex
+++ b/frontmatter/frontmatter.tex
@@ -31,7 +31,7 @@
 \setcounter{page}{1}
 % \input{frontmatter/ORG}    				% Statement of Originality
 % \input{frontmatter/Dedication}    	% Dedication
-% \input{frontmatter/abstract_cn}     % Traditional Chinense Abstract
+\input{frontmatter/abstract_cn}     % Traditional Chinense Abstract
 \input{frontmatter/abstract_en}     % English Abstract
 \input{frontmatter/acknowledgments} % Acknowledgements
 \input{frontmatter/publications}    % List of Publications
