Fix duplicate labels

--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -35,7 +35,7 @@ pdfkeywords={Human identification, person re-identification, person search, deep
 pdfsubject={Ph.D. Thesis},
 bookmarksnumbered, bookmarksopen=true, pdfpagemode=UseOutlines, pdfstartview={FitV},
 linkcolor=blue, colorlinks=true, anchorcolor=black,
-citecolor=blue,filecolor=magenta,menucolor=blue,pagecolor=red,urlcolor=blue}
+citecolor=blue,filecolor=magenta,menucolor=blue,urlcolor=blue}
 
 \setlength{\textfloatsep}{20pt} \setlength{\floatsep}{20pt}
 \setlength{\intextsep}{20pt} \setlength{\dbltextfloatsep}{20pt}
